--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -113,6 +113,7 @@ deny 114.199.75.111;
 deny 118.163.74.160;
 deny 125.212.241.131;
 deny 128.127.180.156;
+deny 128.31.0.13;
 deny 135.125.205.25;
 deny 136.244.111.163;
 deny 138.128.222.68;
@@ -189,9 +190,9 @@ deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 178.170.37.11;
+deny 178.17.170.184;
 deny 178.17.170.23;
 deny 178.17.171.102;
-deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.17.174.198;
 deny 178.175.131.141;
@@ -523,7 +524,6 @@ deny 185.254.196.141;
 deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.38.175.133;
-deny 185.39.207.83;
 deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
@@ -1124,8 +1124,8 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::d735;
-deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:6d42:1242:1c00::1cd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
@@ -1243,7 +1243,6 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
-deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
@@ -1515,10 +1514,8 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
-deny 44.194.162.30;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.135.132.20;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.203;
@@ -1634,6 +1631,7 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
+deny 52.70.185.77;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 54.224.79.94;
