--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -110,6 +109,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -150,6 +150,7 @@ allow 152.42.137.210;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
@@ -191,7 +192,6 @@ allow 173.232.195.146;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.255.215;
-allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -530,7 +530,6 @@ allow 185.246.189.99;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
-allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -809,12 +808,14 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bc8:710:3672:dc00:ff:fe42:19db;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+allow 200.25.27.112;
 allow 201.137.252.163;
 allow 202.61.226.98;
 allow 202.69.76.36;
@@ -962,9 +963,9 @@ allow 2.58.95.45;
 allow 2.58.95.47;
 allow 2.58.95.53;
 allow 2.58.95.59;
-allow 2600:3c00:e000:4ee::1;
+allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::2;
+allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
@@ -1529,6 +1530,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 3.209.228.188;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1540,13 +1542,11 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.207.147.249;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.129.199.163;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.203;
@@ -1638,6 +1638,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.252.224.53;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
