--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -63,6 +64,7 @@ allow 107.189.1.9;
 allow 107.189.1.96;
 allow 107.189.2.108;
 allow 107.189.28.199;
+allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
@@ -107,6 +109,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -214,6 +217,7 @@ allow 173.249.57.253;
 allow 173.255.255.215;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.124.32.173;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -575,7 +579,6 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.145.37;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -638,9 +641,9 @@ allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.46.227.185;
-allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.109.120.143;
 allow 193.109.120.160;
 allow 193.109.120.85;
 allow 193.163.170.149;
@@ -832,6 +835,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -839,6 +843,7 @@ allow 2001:bc8:710:3672:dc00:ff:fe42:19db;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
+allow 201.137.7.180;
 allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
@@ -1101,7 +1106,6 @@ allow 2605:6400:30:fdd8::2;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
-allow 2607:5300:201:3100::535e;
 allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
@@ -1522,16 +1526,22 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:1::1078:9b3b;
+allow 2a10:1fc0:1::1ec2:efbe;
 allow 2a10:1fc0:1::6017:3c35;
+allow 2a10:1fc0:1::7895:f9ac;
 allow 2a10:1fc0:1::9a01:890f;
 allow 2a10:1fc0:1::ac76:4d41;
+allow 2a10:1fc0:1::b087:a0ce;
 allow 2a10:1fc0:1::b81d:9391;
 allow 2a10:1fc0:1::c0a:270f;
 allow 2a10:1fc0:1::c0c7:2c7;
+allow 2a10:1fc0:1::d613:61fb;
 allow 2a10:1fc0:1::d717:cb95;
 allow 2a10:1fc0:1::ef6b:36d;
+allow 2a10:1fc0:1::f764:512;
 allow 2a10:1fc0:1::fed5:16e7;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1553,7 +1563,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.223.216.207;
+allow 3.213.27.131;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1573,6 +1583,7 @@ allow 45.128.232.102;
 allow 45.128.232.151;
 allow 45.128.232.170;
 allow 45.129.199.163;
+allow 45.129.199.22;
 allow 45.130.20.250;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1712,6 +1723,7 @@ allow 65.38.121.14;
 allow 66.146.193.33;
 allow 66.175.223.155;
 allow 66.220.242.222;
+allow 66.78.40.139;
 allow 67.219.109.141;
 allow 70.53.133.193;
 allow 71.19.144.106;
@@ -1731,6 +1743,7 @@ allow 77.232.143.248;
 allow 77.232.143.255;
 allow 77.48.28.204;
 allow 77.48.28.239;
+allow 77.72.85.119;
 allow 77.81.247.72;
 allow 77.91.122.149;
 allow 77.91.123.97;
@@ -1820,9 +1833,11 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.217.219.254;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.235.234.209;
+allow 91.235.234.238;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.205.129.119;
