--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -107,6 +107,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -233,7 +234,6 @@ deny 2605:6400:30:fdd8::2;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
-deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::4894;
 deny 2607:5300:61:785::;
@@ -653,16 +653,22 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a10:1fc0:1::1078:9b3b;
+deny 2a10:1fc0:1::1ec2:efbe;
 deny 2a10:1fc0:1::6017:3c35;
+deny 2a10:1fc0:1::7895:f9ac;
 deny 2a10:1fc0:1::9a01:890f;
 deny 2a10:1fc0:1::ac76:4d41;
+deny 2a10:1fc0:1::b087:a0ce;
 deny 2a10:1fc0:1::b81d:9391;
 deny 2a10:1fc0:1::c0a:270f;
 deny 2a10:1fc0:1::c0c7:2c7;
+deny 2a10:1fc0:1::d613:61fb;
 deny 2a10:1fc0:1::d717:cb95;
 deny 2a10:1fc0:1::ef6b:36d;
+deny 2a10:1fc0:1::f764:512;
 deny 2a10:1fc0:1::fed5:16e7;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
